--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "author": "Kevin Castillo",
   "license": "ISC",
   "dependencies": {
+    "@types/uuid": "^8.3.1",
     "aws-lambda": "^1.0.6",
     "aws-sdk": "^2.975.0",
-    "serverless-plugin-typescript": "^1.2.0"
+    "serverless-plugin-typescript": "^1.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.83",
